--- a/css/cover.css
+++ b/css/cover.css
@@ -558,7 +558,7 @@ header {
 .section7-button {
   font-family: KimNamyun;
   font-size: 1.2rem;
-  background-color: #cc9999;
+  background: #cc9999 !important;
   color: #fff;
   border: 0;
   border-radius: 50px;
