--- a/css/cover.css
+++ b/css/cover.css
@@ -422,7 +422,6 @@ header {
 }
 
 .section5-title {
-  margin-top: 1em;
   color: #333;
   text-shadow: none;
 }
@@ -438,6 +437,13 @@ header {
   line-height: 1.5em;
   font-size: 2rem;
 }
+.section5-main-custom {
+  font-family: Cafe24Oneprettynight;
+  /* font-family: KimNamyun; */
+  line-height: 1.5em;
+  font-size: 2rem;
+
+}
 
 .section5-sub {
   font-family: NanumMyeongjo-r;
@@ -448,11 +454,11 @@ header {
 .section5-sub-custom {
   font-family: KimNamyun;
   line-height: 1.5em;
-  font-size: 1.3rem;
+  font-size: 1.7rem;
 }
 
 .section5-table {
-  font-family: NanumMyeongjo-r;
+  font-family: Cafe24Oneprettynight;
   line-height: 1.5em;
   font-size: 1.3rem;
   border-top: 1px solid #ccc;
@@ -472,6 +478,9 @@ header {
   color: white;
   background-color: chocolate;
   border-radius: 50px;
+  font-weight: bold;
+  width: 11%;
+  height: 10%;
 }
 
 .section5-table tr:first-child td {
@@ -479,7 +488,7 @@ header {
 }
 
 .section5-table tr:last-child td {
-  padding-bottom: 2em;
+  padding-bottom: 1em;
 }
 
 .section6-title {
@@ -557,14 +566,14 @@ header {
 
 .section7-button {
   font-family: KimNamyun;
-  font-size: 1.2rem;
+  font-size: 1.2rem!important;
   background: #cc9999 !important;
-  color: #fff;
-  border: 0;
-  border-radius: 50px;
-  padding-top: 0.5em;
-  padding-bottom: 0.5em;
-  margin-bottom: 0.7em;
+  color: #fff !important;
+  border: 0 !important;
+  border-radius: 50px !important;
+  padding-top: 0.5em !important;
+  padding-bottom: 0.5em !important;
+  margin-bottom: 0.7em !important;
 }
 
 .section7-button:hover {
