--- a/css/cover.css
+++ b/css/cover.css
@@ -479,8 +479,8 @@ header {
   background-color: chocolate;
   border-radius: 50px;
   font-weight: bold;
-  width: 11%;
-  height: 10%;
+  width: 18%;
+  height: 18%;
 }
 
 .section5-table tr:first-child td {
@@ -632,4 +632,8 @@ hr.cover-container::after{
   margin: 0 auto;
   background-image: url("../img/icon/leaf.png");
   background-size: 120px 41px;
+}
+
+.accountFont{
+  font-weight: bold;
 }
